--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,11 @@ body {
 }
 
 .country {
-    border: 1px solid #ccc;
+    border: 1px solid #ddd;
     border-radius: 5px;
-    padding: 10px;
-    margin: 10px;
-    /*width: calc(50% - 20px); /* Two countries per row */
+    margin: 10px 0;
+    overflow: hidden;
+    width: 100%;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
