--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     font-family: Arial, sans-serif;
+    background-color: #1c8fc8; 
 }
 
 .country-list {
@@ -21,6 +22,7 @@ body {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    background-color: #5a93a0; 
 }
 
 .country img {
